# learn_opengl

./: .gitattributes  CMakeLists.txt  README.md
res/: lena_512x512.yuv
src/: Camera.h  FileReader.h  Image.cc  Mouse.h  ShaderUtil.cc  ShaderUtil.h  shader.cc  shader.h
test/: CMakeLists.txt  Main.cc  triangle.cc
test_3dview/: CMakeLists.txt  Main.cc  ViewMat.cc  ViewMat.h  ViewRenderer.cc  ViewRenderer.h
test_3dview2/: CMakeLists.txt  Main.cc  PointRenderer.cc  PointRenderer.h  ViewMat.h  ViewRenderer.h
test_color/: CMakeLists.txt  ColorRenderer.cc  ColorRenderer.h  Main.cc  config.h.in
test_fullview/: CMakeLists.txt  Main.cc  Renderer.cc  Renderer.h
test_fullview2/: CMakeLists.txt  Image.h  Main.cc  Renderer.cc  Rotate.cc  Rotate.h  shader.frag  shader.vert
test_overlying/: CMakeLists.txt  Main.cc  Rotate.cc  Rotate.h  Rotate2.cc  Rotate2.h
test_photo_perspective/: CMakeLists.txt  Main.cc  Renderer.cc  Renderer.h  ViewMat.cc  shader.vert
test_rectangle/: CMakeLists.txt  Main.cc  Rectangle.cc  Rectangle.h  shader.vert
test_rgb/: CMakeLists.txt  Container.cc  Container.h  Main.cc
test_rotate/: CMakeLists.txt  Main.cc  Rotate.cc  Rotate.h  shader.vert
test_skybox/: CMakeLists.txt  Renderer.cc  Renderer.h  shader.frag  shader.vert
test_sphere/: CMakeLists.txt  Main.cc  Renderer.cc  Renderer.h  shader.vert
test_triangle/: CMakeLists.txt  Main.cc  Triangle.cc  Triangle.h  shader.frag
test_yuv/: CMakeLists.txt  Container.cc  Container.h  Main.cc  shader.frag  shader.vert
